# Automatic_Control_Assistant

./: Automatic_Control_Assistant.hpp  CHANGELOG.md  README.md
Inc/: Automatic_Control_Assistant.hpp
Inc/omni_wheel_controller/: README.md
Inc/target_based_on_time/: README.md  target_based_on_time.cpp  target_based_on_time.hpp
omni_wheel_controller/: README.md  omni_wheel_controller.cpp  omni_wheel_controller.hpp
pid_controller/: PID_controller.cpp  PID_controller.hpp  PID_controller_util.hpp  PID_controller_velocity.cpp  PID_controller_velocity.hpp  README.md  all.hpp
pid_controller/pid_controller/: README.md
pid_controller/pid_controller_velocity/: README.md
target_based_on_time/: README.md  target_based_on_time.cpp  target_based_on_time.hpp  target_based_on_time_test.cpp
target_based_on_time/debug/: CMakeLists.txt  target_based_on_time_debug.cpp
wheel/: CoordinatePoint.hpp  README.md  all.hpp  coordinate.hpp  coordinate_measurer.cpp  coordinate_measurer.hpp  mecanum_wheel_controller.hpp  omni_wheel_controller.hpp  wheel_controller.hpp
wheel/coordinate_measurer/: README.md
wheel/mecanum_wheel_controller/: README.md
wheel/omni_wheel_controller/: README.md
wheel/wheel_controller/: README.md
